Removed the deprecated jvm flag
Signed-off-by: anisha.kj <anisha.kj@dell.com>